--- a/.config/wofi/config
+++ b/.config/wofi/config
@@ -1,5 +1,5 @@
 show=drun
-width=750
+width=400
 height=400
 always_parse_args=true
 show_all=false
@@ -9,3 +9,5 @@ print_command=true
 insensitive=true
 prompt=
 columns=2
+location=center
+halign=center
