--- a/.config/hypr.conf
+++ b/.config/hypr.conf
@@ -6,17 +6,21 @@
 # bind = SUPER, A, exec, kitty
 
 # You can also remove all the default binds with
-unbind = all
 
 
-exec-once = hyprshade on vibrance
+
+exec = hyprshade auto
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+
+
 $mainMod = SUPER
 
+bind = $mainMod, 4, exec, brave
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, M, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, G, togglefloating,
+#bind = $mainMod, G, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo
 bind = $mainMod, J, togglesplit
@@ -33,21 +37,15 @@ bind = $mainMod, d, movefocus, r
 bind = $mainMod, w, movefocus, u
 bind = $mainMod, s, movefocus, d
 
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
+bind = $mainMod, z, workspace, 1
+bind = $mainMod, x, workspace, 2
+bind = $mainMod, c, workspace, 3
+bind = $mainMod, v, workspace, 4
 
-bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
-bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
-bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
-bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
-bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
-bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
-bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
-bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
-bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
-bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
+bind = $mainMod SHIFT, z, movetoworkspacesilent, 1
+bind = $mainMod SHIFT, x, movetoworkspacesilent, 2
+bind = $mainMod SHIFT, c, movetoworkspacesilent, 3
+bind = $mainMod SHIFT, v, movetoworkspacesilent, 4
 
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 3%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 3%-
@@ -68,15 +66,21 @@ natural_scroll=1
 accel_profile=flat
 follow_mouse=1
 force_no_accel=1
-kb_layout=us, ru
+kb_layout=us
 sensitivity=0.000000
 } 
 
 #############
-### rules ###
+### rules ### 
 #############
 
 windowrulev2 = opacity 1.0,class:^brave-browser$
 # This rule disables blur and other effects for all Brave windows.
 #windowrulev2 = noblur,class:^(brave-browser)$
 #windowrulev2 = nodim,class:^(brave-browser)$
+bind = $mainMod, G, exec, hyprctl dispatch togglefloating && hyprctl dispatch resizeactive exact 1000 800 && hyprctl dispatch centerwindow
+# Make all Steam windows floating by default
+windowrulev2 = float, class:^(steam)$
+
+# Make the main Steam window tiled again, as this rule comes after the general rule
+windowrulev2 = tile, title:^(Steam)$
